--- a/sass/style.sass
+++ b/sass/style.sass
@@ -101,6 +101,9 @@ span
         font-size: 16px
     &:hover
         background-color: #AA8C41
+.abutton
+    &:hover
+        border-bottom: none
 .ico
     width: 40px
     height: 40px
@@ -905,15 +908,30 @@ span
             margin: 50px 0
         &--text
             text-align: center
+            max-width: 800px
+            margin: 0 auto
         &--elemente
             display: flex
             flex-direction: column
-            margin-top: 50px
+            margin: 50px auto 0
+            padding-bottom: 100px
             width: 100%
-            max-width: 900px
+            max-width: 700px
+            @media (min-width: 760px) and (orientation: portrait)
+                flex-direction: row
+                margin-top: 100px
+                justify-content: space-between
+            @media (min-width: 1024px) and (orientation: landscape)
+                flex-direction: row
+                margin-top: 100px
+                justify-content: space-between
             &-elementeLeft
                 display: flex
                 flex-direction: column
+                @media (min-width: 760px) and (orientation: portrait)
+                    margin-right: 30px
+                @media (min-width: 1024px) and (orientation: landscape)
+                    margin-right: 30px
                 &_mail
                     display: flex
                     flex-direction: column
@@ -1001,13 +1019,24 @@ span
             &-elementeRight
                 display: flex
                 flex-direction: column
+                @media (min-width: 760px) and (orientation: portrait)
+                    flex-direction: column-reverse
+                    height: 600px
+                    justify-content: space-between
+                @media (min-width: 1024px) and (orientation: landscape)
+                    flex-direction: column-reverse
+                    height: 600px
+                    justify-content: space-between
                 &_map
                     width: 200px
                     height: 200px
                     margin: 0 auto 75px
-                    // margin-bottom: 75px
                     border: 2px solid #AA8C41
                     border-radius: 50%
+                    @media (min-width: 1024px) and (orientation: landscape)
+                        width: 300px
+                        height: 300px
+                        border-radius: 0
                 &_clock
                     display: flex
                     flex-direction: column
@@ -1039,3 +1068,8 @@ span
                         font-size: 11px
                         &:last-child
                             margin-top: 0
+                        @media (min-width: 760px) and (orientation: portrait)
+                            margin-top: 0
+                        @media (min-width: 1024px) and (orientation: landscape)
+                            margin-top: 0
+                        
